--- a/dev/scss/modules/_content.scss
+++ b/dev/scss/modules/_content.scss
@@ -227,13 +227,19 @@
 	color: #ffffff;
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
-}
-
-.belmij-head-titel{
 	margin-top: 40px;
 }
 
-#input_3_1, #input_3_2, #input_3_3, #input_3_4{
+.belmij-head-home{
+	background: #f48022;
+	padding: 10px 10px;
+	color: #ffffff;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+
+#input_3_1, #input_3_2, #input_3_3, #input_3_4 , #input_3_6{
 	width: 100%;
 	border: 1px solid #d5d5d5;
 	border-radius: 3px;
@@ -247,12 +253,12 @@
    display: none;
  }
 
- .blog:nth-of-type(-n+1){
+ .blog:nth-of-type(-n+2){
    display: block;
  }
 
  .show-all{
-	width: 35%;
+	width: 185px;
 	background-color: #f48022;
 	color: #ffffff;
 	border: 0px;
@@ -261,7 +267,8 @@
 	padding: 10px;
 	height: 32px;
 	outline: none;
-	margin-top: 67px;
+	margin-top: 17px;
+	margin-bottom: 40px;
  }
 
 .blog-header{
@@ -337,7 +344,7 @@
 }
 
 //Contact pagina input fields
-#input_1_1, #input_1_2, #input_1_3, #input_1_4, #input_1_5, #input_1_6, #input_1_7, #input_1_8{
+#input_1_1, #input_1_2, #input_1_3, #input_1_4, #input_1_5, #input_1_6, #input_1_7, #input_1_8, #input_1_9{
 	width: 100%;
 	border:1px solid #d5d5d5;
 	border-radius: 3px;
@@ -571,6 +578,13 @@
 	padding-bottom: 25px;
 }
 
+
+.wp-image-315{
+	height: 50%;
+}
+
+
+
 //Responsive gedeelte
 
 @media all and (min-width: 600px) and (max-width: 1040px) {
@@ -585,8 +599,39 @@
 		overflow:hidden;
 		height: 350px;
 	}
+
+	.slider-p{
+		font-size: 11px;
+	}
+
+	.slider-h4{
+		font-size: 19px;
+		top: 24px;
+	}
+
+	.slider-imac{
+		width: 231px;
+	}
 }
 
+
+@media all and (min-width: 1040px) {
+
+	.video-area-bg{
+		display: none;
+	}
+
+	.macbook-relative-responsive{
+		display: none;
+	}
+}
+
+@media all and (min-width: 750px) {
+
+	.Slider-responsive{
+		display: none;
+	}
+}
 
 @media all and (max-width: 1040px) {
 	.box-diensten{
@@ -601,6 +646,22 @@
 		display: none;
 	}
 
+	.video-area{
+		display: none;
+	}
+}
+
+@media all and (max-width: 750px) {
+
+
+	.home .bx-wrapper{
+		display: none;
+	}
+
+	.page-template-template-landingspagina-php .bx-wrapper{
+		display: none;
+	} 
+
 	.Slider-responsive h4{
 		color: #ffffff;
 	}
@@ -612,7 +673,7 @@
 
 	.Slider-responsive a{
 		background-color: #f48022;
-	 	color: #ffffff;
+	 	color: #ffffff;	
 	 	border: 0px;
 	  	-moz-border-radius: 5px;
 	  	-webkit-border-radius: 5px;
@@ -623,32 +684,11 @@
 	      background-color: #f19449;
 	   }
 	}
-	.home .bx-wrapper{
-		display: none;
-	}
-
-	.video-area{
-		display: none;
-	}
-}
-
-
-@media all and (min-width: 1040px) {
-	.Slider-responsive{
-		display: none;
-	}
-
-	.video-area-bg{
-		display: none;
-	}
-
-	.macbook-relative-responsive{
-		display: none;
-	}
 }
 
 
 @media all and (max-width: 600px) {
+
 
 	.blog-content{
 		padding-top: 11px;
