--- a/dev/scss/modules/_content.scss
+++ b/dev/scss/modules/_content.scss
@@ -221,21 +221,21 @@
 	margin-right: 10px;
 }
 
-.belmij-head-titel{
+.belmij-head{
 	background: #f48022;
 	padding: 10px 10px;
 	color: #ffffff;
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
+}
+
+.belmij-head-titel{
+	@extend .belmij-head;
 	margin-top: 40px;
 }
 
 .belmij-head-home{
-	background: #f48022;
-	padding: 10px 10px;
-	color: #ffffff;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
+	@extend .belmij-head;
 }
 
 
@@ -444,6 +444,7 @@
 
 .macbook-showcase {
 	width: 650px;
+	margin-top: 39px;
 }
 
 .macbook-relative{
@@ -452,7 +453,7 @@
 
 .iframe-showcase{
 	position: absolute;
-	top: -195px;
+	top: -155px;
 	left: -77px;
 	width: 1108px;
     height: 710px;
@@ -466,12 +467,19 @@
 	margin-top: 50px;
 }
 
+.case-blok-top{
+	margin-top: 100px;
+}
+
 .case-blok{
 	height: 175px;
 	margin-bottom: 50px;
 }
 
 .dienst-thumb{
+	filter:grayscale(100%); 
+  	-webkit-filter: grayscale(100%);
+  	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
    -webkit-transition:all 0.4s ease;
    -moz-transition:all 0.4s ease;
    -o-transition:all 0.4s ease;
@@ -479,8 +487,9 @@
 
 
 .dienst-thumb:hover{
-  opacity: 0.8; 
-  -webkit-transition:all 0.4s ease;
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");  -webkit-transition:all 0.4s ease;
   -moz-transition:all 0.4s ease;
   -o-transition:all 0.4s ease;
 }
