--- a/dev/scss/modules/_content.scss
+++ b/dev/scss/modules/_content.scss
@@ -6,6 +6,11 @@
 	font-size: 16px;
 	font-weight: 600;
 }
+// klantenervaringen//
+
+.klantenervaring-img {
+	padding-top: 40px;
+}
 
 //Dit is voor de home page
 .container-relative{
